--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --release
     - name: Run tests
       run: cargo test --verbose
+    - name: Upload Binaries
+      uses: softprops/action-gh-release@v1
+      with:
+          files: |
+            target/release/Wordle
+            target/release/Wordle.exe
