Modify Rust CI workflow for tag triggers and permissions
Updated workflow to trigger on version tags and added permissions for contents.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,26 +3,31 @@ name: Rust
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - 'v*'
+
+permissions:
+  contents: write
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose --release
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Upload Binaries
-      uses: softprops/action-gh-release@v1
-      with:
+      - uses: actions/checkout@v4
+
+      - name: Build
+        run: cargo build --release
+
+      - name: Run tests
+        run: cargo test
+
+      - name: Upload binaries to GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
           files: |
             target/release/Wordle
             target/release/Wordle.exe
