--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,6 +2,8 @@ name: Rust CI with Cross-Compilation
 
 on:
   push:
+    tags:
+      - 'v*'
     branches: [ "main" ]
   release:
     types: [created]
